src/app/layout/styles/_sidebar.scss
#sidebar {
    height: 100%;
    width: 60px;
    float: left;
    background-color: $neutral-grey;
    color: white;
    position: relative;
    @media (max-width: 768px) {
        z-index: 20;
    }
    .detail-actions {
        list-style: none;
        padding: 0;
        li {
            height: 50px;
            a {
                padding: 1em;
                text-align: center;
                text-decoration: none;
                display: block;
                width: 100%;
                height: 100%;
                border: none;
                border-bottom: 1px solid $neutral-grey;
                box-shadow: none;
                background: white;
                color: $dark-grey;
                .txt-icon {
                    font-weight: bold;
                }
                &:focus {
                    background: $light-grey;
                    outline: none;
                    outline-color: transparent;
                    outline-style: none;
                    box-shadow: 0px 1px 2px 0px #444;
                }
            }
            .isFav i {
                transform: scale(1.5);
            }
        }
    }

    & > div {
        height: 100%;
        @include detail-sidebar-coloring();
    }
}

